--- a/testTask/assets/style/_fonts.scss
+++ b/testTask/assets/style/_fonts.scss
@@ -1,5 +1,6 @@
 @font-face {
   font-family: 'Open Sans Condensed', sans-serif;
-	src: url("../fonts/OpenSansCondensed-Bold.ttf");
+  font-weight: bold;
+  src: url("../fonts/OpenSansCondensed-Bold.ttf");
 }
 
