--- a/testTask/assets/style/_colors.scss
+++ b/testTask/assets/style/_colors.scss
@@ -14,3 +14,9 @@ $content-border: rgb(217,217,217);
 $text-grey-color: rgb(110, 110, 110);
 $lighter-grey-color: rgb(226,226,226);
 $text-links-color: rgb(198, 3, 4);
+//
+//Aside colors:
+//
+$black-link-color: rgb(0,0,0);
+$grey-link-color: rgb(110, 110, 110);
+$grey-border-color: rgb(217, 217, 217);
