--- a/testTask/assets/style/style.css
+++ b/testTask/assets/style/style.css
@@ -327,42 +327,42 @@ header .header-sub-wrapper .header-sub__container .sub__fav-news {
 .content-wrapper .content-container .main-news .main-news__container .main-news__header .main-news__view-info .comments-counter .comm-counter {
   font-size: 0.6875rem;
 }
-.content-wrapper .content-container .main-news .img-block .main-photo {
+.content-wrapper .content-container .main-news .main-news__container .img-block .main-photo {
   margin: 20px 0;
   width: 610px;
   height: 385px;
 }
-.content-wrapper .content-container .main-news .news-block .news-subtitle {
+.content-wrapper .content-container .main-news .main-news__container .news-block .news-subtitle {
   font-size: 1.3125rem;
   line-height: 24px;
   font-weight: 500;
 }
-.content-wrapper .content-container .main-news .news-block .news-text {
+.content-wrapper .content-container .main-news .main-news__container .news-block .news-text {
   font-size: 0.9375rem;
   line-height: 18px;
   font-weight: 300;
   padding: 10px 0;
 }
-.content-wrapper .content-container .main-news .news-block .text-link {
+.content-wrapper .content-container .main-news .main-news__container .news-block .text-link {
   color: #c60304;
 }
-.content-wrapper .content-container .main-news .news-block .news-photo {
+.content-wrapper .content-container .main-news .main-news__container .news-block .news-photo {
   width: 610px;
   height: 450px;
 }
-.content-wrapper .content-container .main-news .news-block .news-how-to {
+.content-wrapper .content-container .main-news .main-news__container .news-block .news-how-to {
   text-align: center;
   font-size: 0.9375rem;
   line-height: 18px;
   font-weight: 300;
 }
-.content-wrapper .content-container .main-news .news-block .news-how-to .how-to-list {
+.content-wrapper .content-container .main-news .main-news__container .news-block .news-how-to .how-to-list {
   list-style: none;
 }
-.content-wrapper .content-container .main-news .news-block .news-how-to .how-to-list .list-item {
+.content-wrapper .content-container .main-news .main-news__container .news-block .news-how-to .how-to-list .list-item {
   padding: 5px 0;
 }
-.content-wrapper .content-container .main-news .news-block .news-how-to .submit-button {
+.content-wrapper .content-container .main-news .main-news__container .news-block .news-how-to .submit-button {
   display: block;
   width: 100%;
   height: 25px;
@@ -372,37 +372,116 @@ header .header-sub-wrapper .header-sub__container .sub__fav-news {
   font-weight: 600;
   margin: 5px 0;
 }
-.content-wrapper .content-container .main-news .news-block .tags-container {
-  height: 15px;
+.content-wrapper .content-container .main-news .main-news__container .news-block .tags-container {
+  height: 60px;
 }
-.content-wrapper .content-container .main-news .news-block .tags-container .tags-block {
+.content-wrapper .content-container .main-news .main-news__container .news-block .tags-container .tags-block {
   display: flex;
   font-size: 0.6875rem;
   text-transform: uppercase;
   margin: 10px 0;
 }
-.content-wrapper .content-container .main-news .news-block .tags-container .tags-block .tags-link {
+.content-wrapper .content-container .main-news .main-news__container .news-block .tags-container .tags-block .tags-link {
   margin-left: 5px;
   color: #6e6e6e !important;
 }
-.content-wrapper .content-container .main-news .news-block .tags-container .error-text {
+.content-wrapper .content-container .main-news .main-news__container .news-block .tags-container .error-text {
   width: 100%;
   font-size: 0.6875rem;
   color: #6e6e6e !important;
   margin: 10px 0;
 }
-.content-wrapper .content-container .main-news .some-news__wrapper {
+.content-wrapper .content-container .main-news .main-news__container .some-news__wrapper {
   width: 100%;
   height: 20px;
   border-bottom: 3px solid #c60304;
   text-transform: uppercase;
   font-size: 0.875rem;
 }
-.content-wrapper .content-container .main-news .some-news__wrapper .some-news-link {
+.content-wrapper .content-container .main-news .main-news__container .some-news__wrapper .some-news-link {
   color: #c60304 !important;
 }
-.content-wrapper .content-container .main-news .aside-news__container {
+.content-wrapper .content-container .aside-news__wrapper {
   width: 300px;
+  float: right;
+}
+.content-wrapper .content-container .aside-news__wrapper .city-news__container .city-news__header-container {
+  margin-top: 30px;
+  width: 100%;
+  height: 25px;
+  border-bottom: 3px solid #c60304;
+}
+.content-wrapper .content-container .aside-news__wrapper .city-news__container .city-news__header-container .aside-header-link {
+  text-transform: uppercase;
+  color: #c60304;
+  font-size: 0.875rem;
+}
+.content-wrapper .content-container .aside-news__wrapper .city-news__container .city-news__sub-header {
+  display: flex;
+}
+.content-wrapper .content-container .aside-news__wrapper .city-news__container .city-news__sub-header .sub-header-link {
+  margin: 10px 15px 10px 0;
+  text-transform: uppercase;
+  font-size: 0.6875rem;
+  color: #6e6e6e;
+}
+.content-wrapper .content-container .aside-news__wrapper .city-news__container .city-news__content-container {
+  margin-top: 10px;
+  border-top: 1px solid #d9d9d9;
+  border-bottom: 1px solid #d9d9d9;
+  padding: 25px 0;
+  font-size: 0.8125rem;
+}
+.content-wrapper .content-container .aside-news__wrapper .city-news__container .city-news__content-container .ranked-news {
+  line-height: 15px;
+}
+.content-wrapper .content-container .aside-news__wrapper .city-news__container .city-news__content-container .ranked-news .news-img {
+  float: left;
+  width: 140px;
+  height: 90px;
+  margin-right: 10px;
+}
+.content-wrapper .content-container .aside-news__wrapper .city-news__container .city-news__content-container .ranked-news .news-link {
+  color: black;
+}
+.content-wrapper .content-container .aside-news__wrapper .city-news__container .city-news__content-container .not-ranked-news {
+  font-weight: normal;
+}
+.content-wrapper .content-container .aside-news__wrapper .city-news__container .city-news__content-container .not-ranked-news .news-article {
+  margin-top: 30px;
+}
+.content-wrapper .content-container .aside-news__wrapper .city-news__container .city-news__content-container .not-ranked-news .news-article p {
+  margin-top: 10px;
+}
+.content-wrapper .content-container .aside-news__wrapper .city-news__container .city-news__content-container .not-ranked-news .news-article p .article-link {
+  color: black;
+}
+.content-wrapper .content-container .aside-news__wrapper .city-news__container .city-news__content-container .not-ranked-news .news-article p .fa-comment-alt, .content-wrapper .content-container .aside-news__wrapper .city-news__container .city-news__content-container .not-ranked-news .news-article p span {
+  font-size: 0.625rem;
+  color: #6e6e6e;
+}
+.content-wrapper .content-container .aside-news__wrapper .plot__container {
+  margin-top: 20px;
+}
+.content-wrapper .content-container .aside-news__wrapper .plot__container .plot-header {
+  width: 100%;
+  height: 25px;
+  border-bottom: 3px solid #c60304;
+}
+.content-wrapper .content-container .aside-news__wrapper .plot__container .plot-header .plot-header-link {
+  text-transform: uppercase;
+  color: #c60304;
+  font-size: 0.875rem;
+}
+.content-wrapper .content-container .aside-news__wrapper .plot__container .plot-items {
+  margin-top: 20px;
+}
+.content-wrapper .content-container .aside-news__wrapper .plot__container .plot-items .plot-item__img {
+  height: 43px;
+  width: 67px;
+  float: left;
+}
+.content-wrapper .content-container .aside-news__wrapper .plot__container .plot-items .plot-item__text {
   float: right;
 }
 
