--- a/testTask/assets/style/style.scss
+++ b/testTask/assets/style/style.scss
@@ -207,7 +207,6 @@ header {
   .content-container {
     max-width: 940px;
     margin: 0 auto;
-    //height: 1500px;
     padding-bottom: 10px;
 
     .special-news {
@@ -394,107 +393,204 @@ header {
             }
           }
         }
-      }
 
-      .img-block {
-        .main-photo {
-          margin: 20px 0;
-          width: 610px;
-          height: 385px;
-        }
-      }
-
-      .news-block {
-        .news-subtitle {
-          font-size: 1.3125rem;
-          line-height: 24px;
-          font-weight: 500;
+        .img-block {
+          .main-photo {
+            margin: 20px 0;
+            width: 610px;
+            height: 385px;
+          }
         }
 
-        .news-text {
-          font-size: 0.9375rem;
-          line-height: 18px;
-          font-weight: 300;
-          padding: 10px 0;
-        }
+        .news-block {
+          .news-subtitle {
+            font-size: 1.3125rem;
+            line-height: 24px;
+            font-weight: 500;
+          }
 
-        .text-link {
-          color: $text-links-color;
-        }
+          .news-text {
+            font-size: 0.9375rem;
+            line-height: 18px;
+            font-weight: 300;
+            padding: 10px 0;
+          }
 
-        .news-photo {
-          width: 610px;
-          height: 450px;
-        }
+          .text-link {
+            color: $text-links-color;
+          }
 
-        .news-how-to {
-          text-align: center;
-          font-size: 0.9375rem;
-          line-height: 18px;
-          font-weight: 300;
+          .news-photo {
+            width: 610px;
+            height: 450px;
+          }
 
-          .how-to-list {
-            list-style: none;
+          .news-how-to {
+            text-align: center;
+            font-size: 0.9375rem;
+            line-height: 18px;
+            font-weight: 300;
 
-            .list-item {
-              padding: 5px 0;
+            .how-to-list {
+              list-style: none;
+
+              .list-item {
+                padding: 5px 0;
+              }
+            }
+
+            .submit-button {
+              display: block;
+              width: 100%;
+              height: 25px;
+              line-height: 25px;
+              border: 1px solid black;
+              color: black;
+              font-weight: 600;
+              margin: 5px 0;
             }
           }
 
-          .submit-button {
-            display: block;
-            width: 100%;
-            height: 25px;
-            line-height: 25px;
-            border: 1px solid black;
-            color: black;
-            font-weight: 600;
-            margin: 5px 0;
-          }
-        }
+          .tags-container {
+            height: 60px;
 
-        .tags-container {
-          height: 15px;
+            .tags-block {
+              display: flex;
+              font-size: 0.6875rem;
+              text-transform: uppercase;
+              margin: 10px 0;
 
-          .tags-block {
-            display: flex;
-            font-size: 0.6875rem;
-            text-transform: uppercase;
-            margin: 10px 0;
+              .tags-link {
+                margin-left: 5px;
+                color: $text-grey-color !important;
 
-            .tags-link {
-              margin-left: 5px;
+              }
+            }
+
+            .error-text {
+              width: 100%;
+              font-size: 0.6875rem;
               color: $text-grey-color !important;
+              margin: 10px 0;
+            }
 
+          }
+        }
+
+        .some-news__wrapper {
+          width: 100%;
+          height: 20px;
+          border-bottom: 3px solid $text-links-color;
+          text-transform: uppercase;
+          font-size: 0.875rem;
+
+          .some-news-link {
+            color: $text-links-color !important;
+          }
+        }
+      }
+    }
+
+    .aside-news__wrapper {
+      width: 300px;
+      float: right;
+
+      .city-news__container {
+        .city-news__header-container {
+          margin-top: 30px;
+          @include aside-header-style;
+
+          .aside-header-link {
+            @include aside-header-link-style;
+          }
+
+        }
+
+        .city-news__sub-header {
+          display: flex;
+
+          .sub-header-link {
+            margin: 10px 15px 10px 0;
+            text-transform: uppercase;
+            font-size: 0.6875rem;
+            color: $text-grey-color;
+          }
+        }
+
+        .city-news__content-container {
+          margin-top: 10px;
+          border-top: 1px solid $grey-border-color;
+          border-bottom: 1px solid $grey-border-color;
+          padding: 25px 0;
+          font-size: 0.8125rem;
+
+          .ranked-news {
+            line-height: 15px;
+
+            .news-img {
+              float: left;
+              width: 140px;
+              height: 90px;
+              margin-right: 10px;
+            }
+
+            .news-link {
+              color: $black-link-color;
             }
           }
 
-          .error-text {
-            width: 100%;
-            font-size: 0.6875rem;
-            color: $text-grey-color !important;
-            margin: 10px 0;
+          .not-ranked-news {
+            font-weight: normal;
+
+            .news-article {
+              margin-top: 30px;
+
+              p {
+                margin-top: 10px;
+
+                .article-link {
+                  color: $black-link-color;
+                }
+
+                .fa-comment-alt, span {
+                  font-size: 0.625rem;
+                  color: $grey-link-color;
+                }
+
+              }
+            }
+          }
+        }
+      }
+
+      .plot__container {
+        margin-top: 20px;
+
+        .plot-header {
+          @include aside-header-style;
+
+          .plot-header-link {
+            @include aside-header-link-style;
+          }
+        }
+
+        .plot-items {
+          margin-top: 20px;
+
+          .plot-item__img {
+            height: 43px;
+            width: 67px;
+            float: left;
           }
 
+          .plot-item__text {
+            float: right;
+          }
         }
-      }
-
-      .some-news__wrapper {
-        width: 100%;
-        height: 20px;
-        border-bottom: 3px solid $text-links-color;
-        text-transform: uppercase;
-        font-size: 0.875rem;
-
-        .some-news-link {
-          color: $text-links-color !important;
-        }
-      }
-
-      .aside-news__container {
-        width: 300px;
-        float: right;
       }
     }
   }
 }
+
+
+
