--- a/testTask/assets/style/_colors.scss
+++ b/testTask/assets/style/_colors.scss
@@ -20,3 +20,5 @@ $text-links-color: rgb(198, 3, 4);
 $black-link-color: rgb(0,0,0);
 $grey-link-color: rgb(110, 110, 110);
 $grey-border-color: rgb(217, 217, 217);
+//Arrow container colors:
+$grey-arrow: rgb(110, 110, 110);
