--- a/testTask/assets/style/style.css
+++ b/testTask/assets/style/style.css
@@ -474,15 +474,96 @@ header .header-sub-wrapper .header-sub__container .sub__fav-news {
   font-size: 0.875rem;
 }
 .content-wrapper .content-container .aside-news__wrapper .plot__container .plot-items {
-  margin-top: 20px;
+  margin-top: 10px;
+  height: 50px;
+  border-bottom: 1px solid #d9d9d9;
 }
 .content-wrapper .content-container .aside-news__wrapper .plot__container .plot-items .plot-item__img {
   height: 43px;
   width: 67px;
   float: left;
+  display: inline-block;
 }
-.content-wrapper .content-container .aside-news__wrapper .plot__container .plot-items .plot-item__text {
+.content-wrapper .content-container .aside-news__wrapper .plot__container .plot-items .plot-item__container {
+  display: inline-block;
   float: right;
+  height: 43px;
+  width: 225px;
+}
+.content-wrapper .content-container .aside-news__wrapper .plot__container .plot-items .plot-item__container .plot-item__text {
+  font-weight: normal;
+  font-size: 0.8125rem;
+  float: right;
+  color: black;
+}
+.content-wrapper .content-container .aside-news__wrapper .choice__container {
+  margin-top: 20px;
+}
+.content-wrapper .content-container .aside-news__wrapper .choice__container .choice__header {
+  width: 100%;
+  height: 25px;
+  border-bottom: 3px solid #c60304;
+}
+.content-wrapper .content-container .aside-news__wrapper .choice__container .choice__header .header-link {
+  text-transform: uppercase;
+  color: #c60304;
+  font-size: 0.875rem;
+  float: left;
+}
+.content-wrapper .content-container .aside-news__wrapper .choice__container .choice__header .right-arrow__container {
+  display: inline-block;
+  width: 21px;
+  height: 21px;
+  background-color: #6e6e6e;
+  float: right;
+  position: relative;
+  cursor: pointer;
+  margin-left: 5px;
+}
+.content-wrapper .content-container .aside-news__wrapper .choice__container .choice__header .right-arrow__container .right-arrow {
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border-bottom: 3px solid white;
+  border-right: 3px solid white;
+  top: 5px;
+  left: 3px;
+  transform: rotate(-45deg);
+}
+.content-wrapper .content-container .aside-news__wrapper .choice__container .choice__header .left-arrow__container {
+  display: inline-block;
+  width: 21px;
+  height: 21px;
+  background-color: #6e6e6e;
+  float: right;
+  position: relative;
+  cursor: pointer;
+}
+.content-wrapper .content-container .aside-news__wrapper .choice__container .choice__header .left-arrow__container .left-arrow {
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border-bottom: 3px solid white;
+  border-right: 3px solid white;
+  top: 5px;
+  left: 2px;
+  transform: rotate(135deg);
+  margin-left: 5px;
+}
+.content-wrapper .content-container .aside-news__wrapper .choice__container .choice__header .header-count {
+  float: right;
+  margin-right: 5px;
+}
+.content-wrapper .content-container .aside-news__wrapper .choice__container .choice__header .header-count .count-item {
+  font-size: 0.6875rem;
+  color: #6e6e6e;
+}
+.content-wrapper .content-container .aside-news__wrapper .choice__container .choice__item {
+  margin-top: 12px;
+}
+.content-wrapper .content-container .aside-news__wrapper .choice__container .choice__item .choice__item-img {
+  height: 155px;
+  width: 300px;
 }
 
 /*# sourceMappingURL=style.css.map */
